.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Post__c.object
<CustomObject>
    <description>Public Sector
Records Posts to which Employees are appointed</description>
    <fields>
        <fullName>xcdhcm__Appointments__c</fullName>
        <description>Records how many appointments have been made to this Post</description>
        <label>Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__CRB_level_required__c</fullName>
        <label>DBS level required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <formula>xcdhcm__Company_job_role_L__r.xcdhcm__Companies_Name__r.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_job_role_L__c</fullName>
        <label>Company job role</label>
        <referenceTo>xcdhcm__Company_Job_Roles__c</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Compensation_basis__c</fullName>
        <inlineHelpText>Identifies how Post holder is paid on joining or changing Compensation</inlineHelpText>
        <label>Compensation basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>xcdhcm__Compensation_basis</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Contractual_hours_FTE__c</fullName>
        <formula>xcdhcm__Company_job_role_L__r.xcdhcm__Companies_Name__r.xcdhcm__Total_Hours_Per_Week__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractual hours FTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_centre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost centre</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Cost_centre__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Cost_centre__c</referenceTo>
        <relationshipLabel>Posts Using Code</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Department, Team or other Organisation unit in which the Post sits</description>
        <label>Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Departments__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Departments__c</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_from__c</fullName>
        <label>Effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_to__c</fullName>
        <label>Effective to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Eligible_for_overtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Formal_qualifications_required__c</fullName>
        <label>Formal qualifications required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Grade__c</fullName>
        <description>Grade may be set directly on Post or on Company Job Role
Where CJR is used to set Grade, do not display Grade lookup from Post</description>
        <formula>if( xcdhcm__Post_grade__c  &lt;&gt;  null,
 xcdhcm__Post_grade__r.Name ,
xcdhcm__Company_job_role_L__r.xcdhcm__Grade_L__r.Name)</formula>
        <inlineHelpText>Records the Grade, Level, Band or Role associated with this Pay Spine</inlineHelpText>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Key_user_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key user status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Location_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Location__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Location__c</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_FTE_salary__c</fullName>
        <formula>IF(ISNULL(xcdhcm__Post_grade__c), xcdhcm__Company_job_role_L__r.xcdhcm__Grade_L__r.xcdhcm__Max_FTE_salary__c , xcdhcm__Post_grade__r.xcdhcm__Max_FTE_salary__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max FTE salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Medical_form_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical form required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Min_FTE_salary__c</fullName>
        <formula>IF(ISNULL(xcdhcm__Post_grade__c),xcdhcm__Company_job_role_L__r.xcdhcm__Grade_L__r.xcdhcm__Min_FTE_salary__c , xcdhcm__Post_grade__r.xcdhcm__Min_FTE_salary__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min FTE salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_scale__c</fullName>
        <formula>if( xcdhcm__Post_grade__c &lt;&gt; null,
 xcdhcm__Post_grade__r.xcdhcm__Pay_scale__r.Name  ,
xcdhcm__Company_job_role_L__r.xcdhcm__Grade_L__r.xcdhcm__Pay_scale__r.Name)</formula>
        <label>Pay scale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Politically_restricted_post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Politically restricted post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct lookup to Grade.  Use this field in LA Org when using Post but not Company Job Role</description>
        <label>Grade</label>
        <referenceTo>xcdhcm__Grade__c</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Vacancy</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_title__c</fullName>
        <label>Post title</label>
        <length>225</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reports_to_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports to (post)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Post__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Post__c</referenceTo>
        <relationshipLabel>Reporting Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
                <value>
                    <fullName>Tier 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_post_cost__c</fullName>
        <inlineHelpText>Sums %age of Post costs which are to be allocated to identified Post cost codes</inlineHelpText>
        <label>Total post cost %</label>
        <summarizedField>xcdhcm__Post_Cost__c.xcdhcm__Cost_percent__c</summarizedField>
        <summaryForeignKey>xcdhcm__Post_Cost__c.xcdhcm__Post__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lecturer</fullName>
                </value>
                <value>
                    <fullName>Socialworker</fullName>
                </value>
                <value>
                    <fullName>Support staff</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Type_of_change__c</fullName>
        <label>Type of change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Job</fullName>
                </value>
                <value>
                    <fullName>Amended Job</fullName>
                </value>
                <value>
                    <fullName>Delete Job</fullName>
                </value>
                <value>
                    <fullName>New Post</fullName>
                </value>
                <value>
                    <fullName>Amended Post</fullName>
                </value>
                <value>
                    <fullName>Delete Post</fullName>
                </value>
                <value>
                    <fullName>New Cost Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Post</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Post_title__c</columns>
        <columns>xcdhcm__Company_job_role_L__c</columns>
        <columns>xcdhcm__Grade__c</columns>
        <columns>xcdhcm__Min_FTE_salary__c</columns>
        <columns>xcdhcm__Max_FTE_salary__c</columns>
        <columns>xcdhcm__Post_status__c</columns>
        <columns>xcdhcm__Appointments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Posts</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Post number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Total_Post_Cost_Percent</fullName>
        <active>true</active>
        <description>Ensures that sum of  Post costs cannot be more  than 100%.</description>
        <errorConditionFormula>xcdhcm__Total_post_cost__c  &gt; 1</errorConditionFormula>
        <errorMessage>Sum of  Post costs cannot be more  than 100%.</errorMessage>
    </validationRules>
</CustomObject>